C5-2fix build